# BudgetTracker

./: README.md  build_log.txt  docker-compose.yml  seed_me.sql
.github/workflows/: ci.yml
client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
client/docker/: Dockerfile  nginx.conf
client/src/: App.tsx  index.css
client/src/api/: auth.ts  client.ts  index.ts  transactions.ts
client/src/components/: Charts.tsx  Sidebar.tsx  Toast.tsx  TransactionModal.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: useToast.ts
client/src/pages/: Categories.tsx  Dashboard.tsx  Login.tsx  Register.tsx  Reports.tsx  Transactions.tsx
client/src/types/: index.ts
docs/: openapi.yaml
server/: CMakeLists.txt  config.json
server/docker/: Dockerfile
server/seed/: seed_data.sql
server/src/: auth.cpp  auth.hpp  config.hpp  database.cpp  database.hpp  main.cpp  models.hpp
server/src/handlers/: auth_handler.cpp  auth_handler.hpp  other_handlers.cpp  other_handlers.hpp  transaction_handler.cpp  transaction_handler.hpp
server/src/middleware/: auth_middleware.hpp  rate_limiter.hpp
server/tests/: test_auth.cpp  test_main.cpp  test_reports.cpp  test_transactions.cpp
